# src/main/java/ru/java/device/service/petservice/controller/PetController.java
@@ -1,4 +1,4 @@
-package ru.java.device.service.restapi.controller;
+package ru.java.device.service.petservice.controller;
 
 import api.RestApi;
 import lombok.RequiredArgsConstructor;
@@ -6,8 +6,9 @@ import model.PetFindAllPaginRs;
 import model.PetFindAllRq;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
-import ru.java.device.service.restapi.service.PetService;
+import ru.java.device.service.petservice.service.PetService;
 import model.PetRs;
+
 import java.util.UUID;
 
 @RestController
@@ -21,7 +22,7 @@ public class PetController implements RestApi {
     }
 
     @Override
-    public ResponseEntity<PetRs> restApiV1PetsIdGet(UUID id) {
-        return ResponseEntity.ok(petService.findById(id));
+    public ResponseEntity<PetRs> restApiV1PetsIdGet(UUID idempotentKey, UUID id) {
+        return ResponseEntity.ok(petService.findById(id, idempotentKey));
     }
 }
